kustomizations/perplexica/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perplexica
spec:
  selector:
    app: perplexica
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
